--- a/beckend/auth-service/pom.xml
+++ b/beckend/auth-service/pom.xml
@@ -55,6 +55,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    		<groupId>org.modelmapper</groupId>
+    		<artifactId>modelmapper</artifactId>
+    		<version>2.3.2</version>
+		</dependency>
+		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt</artifactId>
     		<version>LATEST</version>
