--- a/beckend/containerized-gateway/pom.xml
+++ b/beckend/containerized-gateway/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 			<version>1.4.4.RELEASE</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.netflix.ribbon</groupId>
+    		<artifactId>ribbon</artifactId>
+    		<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
