--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-ng-packagr": "^0.13.8",
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.15",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -26,6 +26,7 @@
     "jquery": "^3.4.0",
     "materialize-css": "^1.0.0",
     "ngx-bootstrap": "^4.0.1",
+    "ngx-toastr": "^10.1.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
